menu hamburguer pronto

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,8 +1,13 @@
 .header{
     background-color: #666666;
 }
-.header img{
+.header .container img{
     width: 45px;
+    margin-left: 3px;
+}
+.header .logo{
+    height: 40px;
+    margin-left: 5px;   
 }
 .header .voltar img{
     margin-left: 10px;
@@ -16,7 +21,7 @@
 .header .menu {
     display: none;
     width: 65px;
-    height: 60px;
+    height: 55px;
 }
 .header .hamburguer {
     background-color: #000;
@@ -70,7 +75,7 @@
     }
     .header nav  {
         position: absolute;
-        right: 0;
+        right: 140px;
         top: 0px;
         z-index: 1;
         background-color: #666666;
@@ -81,8 +86,11 @@
     .header ul li {
         display: block;
         text-align: center;
-        width: 80px;
+        width: 60px;
         padding: 5px;
+    }
+    .header ul li img{
+        width: 50px;
     }    
     .header .itensMenu a {
         margin-left: 0px;
