--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,11 @@
 .header{
     display: flex;
+    align-items: center;
+}
+header .container{
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 60px;
+    height: 55px;
+    width: 100%;
 }
