--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,6 +35,7 @@ main{
     border: #CCCCCC;
     width: 100%;
     height: 35px;
+    text-align: center;
 }
 .corpoPrincipal .consultaProdutos .produtos{
     display: flex;
@@ -72,6 +73,8 @@ main{
 @media (max-width: 900px) {
     .corpoPrincipal{
         display: block;
-        
+    }
+    .corpoPrincipal .tela{
+        width: 95%;
     }
 }
