--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,6 @@ main{
     margin: 20px;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
     width: 45%;
-    max-height: 800px;
 }
 .corpoPrincipal .consultaProdutos{
     padding: 10px;
@@ -36,15 +35,39 @@ main{
     width: 100%;
     height: 35px;
     text-align: center;
+    font-size: 24px;
 }
 .corpoPrincipal .consultaProdutos .produtos{
     display: flex;
     flex-wrap: wrap;
     margin-left: 10px;
+    max-height: 750px;
+    overflow-y: scroll;
 }
+/* -----ESTILO DA BARRA DE ROLAGEM----- */
+.produtos::-webkit-scrollbar-track {
+    background-color:#666666;
+    -webkit-border-radius: 5px;
+}
+.produtos::-webkit-scrollbar {
+    width: 10px;
+    background: #F4F4F4;
+}
+.produtos::-webkit-scrollbar-thumb {
+    background: white;
+    -webkit-border-radius: 5px;
+}
+/* ----- FIM DO ESTILO DA BARRA DE ROLAGEM----- */
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos{
     margin: 10px 15px 10px 0px;
     width: 130px;
+}
+.corpoPrincipal .consultaProdutos .produtos .itemProdutos h1{
+    font-size: 18px;
+    height: 40px;
+}
+.corpoPrincipal .consultaProdutos .produtos .itemProdutos h2{
+    border-top: 1px solid #666666;
 }
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos .containerProdutos{
     background-color: white;
@@ -70,12 +93,13 @@ main{
     height: 35px;
     background-color: #3B843B;
     color: white;
+    font-size: 24px;
 }
 @media (max-width: 900px) {
     .corpoPrincipal{
         display: block;
     }
     .corpoPrincipal .tela{
-        width: 95%;
+        width: 91%;
     }
 }
