--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,14 +36,16 @@ main{
     height: 35px;
     text-align: center;
     font-size: 24px;
+    margin-bottom: 10px;
 }
 .corpoPrincipal .consultaProdutos .produtos{
     display: flex;
     flex-wrap: wrap;
     margin-left: 10px;
-    max-height: 750px;
+    max-height: 700px;
     overflow-y: scroll;
 }
+
 /* -----ESTILO DA BARRA DE ROLAGEM----- */
 .produtos::-webkit-scrollbar-track {
     background-color:#666666;
@@ -58,9 +60,10 @@ main{
     -webkit-border-radius: 5px;
 }
 /* ----- FIM DO ESTILO DA BARRA DE ROLAGEM----- */
+
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos{
-    margin: 10px 15px 10px 0px;
-    width: 130px;
+    margin: 0px 13px 13px 0px;
+    width: 120px;
 }
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos h1{
     font-size: 18px;
@@ -94,6 +97,7 @@ main{
     background-color: #3B843B;
     color: white;
     font-size: 24px;
+    margin-top: 10px;
 }
 @media (max-width: 900px) {
     .corpoPrincipal{
