--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+/* ----- ESTILO DO CABEÇALHO (MENU) ----- */
 .header{
     display: flex;
     align-items: center;
@@ -9,6 +10,9 @@
     height: 55px;
     width: 100%;
 }
+/* ----- FIM DO ESTILO DO CABEÇALHO (MENU) ----- */
+
+/* ----- ESTILO DOS DOIS GRANDES PAINEIS ----- */
 main{
     background: url(../imagens/logo_fundo.png) no-repeat;
     background-color: #EFEFEF;
@@ -25,6 +29,9 @@ main{
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
     width: 45%;
 }
+/* ----- FIM DO ESTILO DOS DOIS GRANDES PAINEIS ----- */
+
+/* ----- ESTILO DO PAINEL DE CONSULTA DE PRODUTOS ----- */
 .corpoPrincipal .consultaProdutos{
     padding: 10px;
     text-align: center;
@@ -45,22 +52,19 @@ main{
     max-height: 700px;
     overflow-y: scroll;
 }
+.corpoPrincipal .consultaProdutos .confirmarLancamento{
+    border-radius: 10px;
+    border: #CCCCCC;
+    width: 100%;
+    height: 35px;
+    background-color: #3B843B;
+    color: white;
+    font-size: 24px;
+    margin-top: 10px;
+}
+/* ----- FIM DO ESTILO DO PAINEL DE CONSULTA DE PRODUTOS ----- */
 
-/* -----ESTILO DA BARRA DE ROLAGEM----- */
-.produtos::-webkit-scrollbar-track {
-    background-color:#666666;
-    -webkit-border-radius: 5px;
-}
-.produtos::-webkit-scrollbar {
-    width: 10px;
-    background: #F4F4F4;
-}
-.produtos::-webkit-scrollbar-thumb {
-    background: white;
-    -webkit-border-radius: 5px;
-}
-/* ----- FIM DO ESTILO DA BARRA DE ROLAGEM----- */
-
+/* ----- ESTILO DOS PRODUTOS CADASTRADOS ----- */
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos{
     margin: 0px 13px 13px 0px;
     width: 120px;
@@ -89,16 +93,23 @@ main{
     width: 25px;
     margin-top: 3px;
 }
-.confirmarLancamento{
-    border-radius: 10px;
-    border: #CCCCCC;
-    width: 100%;
-    height: 35px;
-    background-color: #3B843B;
-    color: white;
-    font-size: 24px;
-    margin-top: 10px;
+/* ----- FIM DO ESTILO DOS PRODUTOS CADASTRADOS ----- */
+
+/* -----ESTILO DA BARRA DE ROLAGEM----- */
+.produtos::-webkit-scrollbar-track {
+    background-color:#666666;
+    -webkit-border-radius: 5px;
 }
+.produtos::-webkit-scrollbar {
+    width: 10px;
+    background: #F4F4F4;
+}
+.produtos::-webkit-scrollbar-thumb {
+    background: white;
+    -webkit-border-radius: 5px;
+}
+/* ----- FIM DO ESTILO DA BARRA DE ROLAGEM----- */
+
 @media (max-width: 900px) {
     .corpoPrincipal{
         display: block;
