--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -8,7 +8,7 @@
 }
 .header .logo{
     height: 40px;
-    margin-left: 10px;   
+    margin:0px 5px 0px 10px;
 }
 .header .voltar img{
     height: 40px;
