--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,8 +14,7 @@
 
 /* ----- ESTILO DOS DOIS GRANDES PAINEIS ----- */
 main{
-    background: url(../imagens/logo_fundo.png) no-repeat;
-    background-color: #EFEFEF;
+    background:#EFEFEF url(../imagens/logo_fundo.png) no-repeat;
     height: 100vh;
 }
 .corpoPrincipal{
@@ -49,7 +48,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     margin-left: 10px;
-    max-height: 700px;
+    height: 75vh;
     overflow-y: scroll;
 }
 .corpoPrincipal .consultaProdutos .confirmarLancamento{
@@ -115,9 +114,9 @@ main{
 /* ----- ESTILO DO PAINEL DE ITENS LANÇADOS ----- */
 .corpoPrincipal .itenslancados{
     padding: 10px;
+    min-width: 630px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
 }
 .corpoPrincipal .itenslancados .numeroMesa{
     border: 1px solid #CCCCCC;
@@ -127,6 +126,12 @@ main{
     width: 120px;
     text-align: center;
     margin-bottom: 10px;
+    align-self: flex-end;
+}
+.corpoPrincipal .itenslancados .gridItens{
+    border: 1px solid;
+    border-radius: 10px;
+    width: 100%;
 }
 .corpoPrincipal .itenslancados .totalMesa{
     border-radius: 10px;
@@ -137,11 +142,8 @@ main{
     color: white;
     font-size: 34px;
     margin-top: 10px;
-}
-.corpoPrincipal .itenslancados .gridItens{
-    border: 1px solid;
-    border-radius: 10px;
-    width: 100%;
+    text-align: right;
+    padding-right: 5px;
 }
 /* ----- FIM DO ESTILO DO PAINEL DE ITENS LANÇADOS ----- */
 
@@ -162,8 +164,8 @@ main{
     display: flex;
     align-items: center;
 }
-.corpoPrincipal .itenslancados .gridItens .itemLancado .descricaoItemLancado{
-
+.corpoPrincipal .itenslancados .gridItens .itemLancado .valorItem{
+    margin-right: 5px;
 }
 .corpoPrincipal .itenslancados .gridItens .itemLancado button{
     border: none;
