--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,8 +91,9 @@ main{
 .corpoPrincipal .consultaProdutos .produtos .itemProdutos .adicionarTirarItem button{
     border: none;
     background-color: transparent;
+}
+.corpoPrincipal .consultaProdutos .produtos .itemProdutos .adicionarTirarItem img{
     width: 25px;
-    margin-top: 3px;
 }
 /* ----- FIM DO ESTILO DOS PRODUTOS CADASTRADOS ----- */
 
@@ -174,7 +175,7 @@ main{
     width: 35px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1150px) {
     .corpoPrincipal{
         display: block;
     }
