--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,10 +1,11 @@
 .header{
     background-color: #666666;
+    border-bottom:3px solid #F58634;
 }
 .header .container img{
     height: 45px;
     width: 45px;
-    margin-left: 10px;
+    margin:5px 6px 0px 6px;
 }
 .header .logo{
     height: 40px;
@@ -13,6 +14,13 @@
 .header .voltar img{
     height: 40px;
     margin-left: 10px;
+}
+.header .container .itensMenu li{
+    height: 55px;
+}
+.header .container .itensMenu li:hover{
+    background-color: #F58634;
+    border:1px solid #3A4145;
 }
 .header nav ul{
     display: flex;
