--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     margin-left: 10px;
-    height: 75vh;
+    max-height: 75vh;
     overflow-y: scroll;
 }
 .corpoPrincipal .consultaProdutos .confirmarLancamento{
@@ -115,7 +115,7 @@ main{
 /* ----- ESTILO DO PAINEL DE ITENS LANÇADOS ----- */
 .corpoPrincipal .itenslancados{
     padding: 10px;
-    min-width: 630px;
+    height: 100%;
 }
 .corpoPrincipal .itenslancados .numeroMesa{
     border: 1px solid #CCCCCC;
@@ -139,7 +139,7 @@ main{
     background-color: #3B843B;
     color: white;
     font-size: 34px;
-    margin-top: 10px;
+    margin-top: 20px;
     text-align: right;
     padding-right: 5px;
 }
