--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -3,24 +3,24 @@
     border-bottom:3px solid #F58634;
 }
 .header .container img{
-    height: 45px;
-    width: 45px;
-    margin:5px 6px 0px 6px;
+    height: 35px;
+    width: 35px;
+    margin:10px 8px 0px 8px;
 }
 .header .logo{
     height: 40px;
     margin:0px 5px 0px 10px;
 }
 .header .voltar img{
-    height: 40px;
-    margin-left: 10px;
+    height: 30px;
+    margin:0 0 0 10px;
 }
 .header .container .itensMenu li{
     height: 55px;
 }
 .header .container .itensMenu li:hover{
     background-color: #F58634;
-    border:1px solid #3A4145;
+    border:1px solid #F58634;
 }
 .header nav ul{
     display: flex;
