--- a/src/css/estiloMenuLateral.css
+++ b/src/css/estiloMenuLateral.css
@@ -1,7 +1,3 @@
-body{
-  background-color: #EFEFEF;
-  height: 100vh;
-}
 .corpoPrincipal{
   display: flex;
   flex-direction: column;
@@ -21,7 +17,7 @@ body{
   align-items: center;
 }
 .botoesLateral img{
-  width: 70px;
+  height: 70px;
   margin-top: 10px;
 }
 .botoesLateral .descricaoMenu{
@@ -30,6 +26,3 @@ body{
 .botoesLateral:hover{
   border: 1px solid #F58634;
 } 
-a:visited{
-  color: black;
-}
