--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -2,10 +2,18 @@
     padding:0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Roboto;
+    font-family: "Roboto", sans-serif;
+}
+body{
+    background-color: #EFEFEF;
+    height: 100vh;
 }
 a{
     text-decoration: none;
+    color: black;
+}
+a:visited{
+    color: black;
 }
 ul{
     list-style: none;
