--- a/src/css/estiloMenuLateral.css
+++ b/src/css/estiloMenuLateral.css
@@ -1,7 +1,13 @@
-.corpoPrincipal{
+main{
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+.corpoPrincipal{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-height: 300px;
 }
 .botoesLateral{
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
